@startuml
!define PRIMARY_KEY PK
!define FOREIGN_KEY FK
!define NOT_NULL NN
!define UNIQUE UNQ

skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0

' Entidades do banco de dados

entity "patients" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN>>
  *cpf : VARCHAR(11) <<NN, UNQ>>
  *email : VARCHAR(100) <<NN, UNQ>>
  *phone : VARCHAR(11) <<NN>>
  *birth_date : DATE <<NN>>
  gender : VARCHAR(20)
  blood_type : VARCHAR(20)
  address : VARCHAR(200)
  city : VARCHAR(100)
  state : VARCHAR(2)
  zip_code : VARCHAR(10)
  medical_history : VARCHAR(500)
  allergies : VARCHAR(500)
  emergency_contact : VARCHAR(20)
  emergency_phone : VARCHAR(11)
  *unity_id : BIGINT <<NN, FK>>
  created_by : BIGINT <<FK>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "unity" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN, UNQ>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "users" <<table>> {
  *id : BIGINT <<PK>>
  --
  *username : VARCHAR(50) <<NN, UNQ>>
  *password : VARCHAR(255) <<NN>>
  *email : VARCHAR(100) <<NN, UNQ>>
  full_name : VARCHAR(100) <<NN>>
  role : VARCHAR(20) <<NN>>
  is_active : BOOLEAN <<NN>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "exams" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN, UNQ>>
  description : VARCHAR(200)
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "result_exams" <<table>> {
  *id : BIGINT <<PK>>
  --
  *patient_id : BIGINT <<NN, FK>>
  *exam_id : BIGINT <<NN, FK>>
  *result_date : DATE <<NN>>
  *result_value : VARCHAR(500) <<NN>>
  notes : VARCHAR(500)
  created_by : BIGINT <<FK>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "medications" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN, UNQ>>
  description : VARCHAR(200)
  dosage_form : VARCHAR(50)
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "doctors" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN>>
  *crm : VARCHAR(20) <<NN, UNQ>>
  specialty : VARCHAR(100)
  phone : VARCHAR(20)
  email : VARCHAR(100)
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "current_medication" <<table>> {
  *id : BIGINT <<PK>>
  --
  *patient_id : BIGINT <<NN, FK>>
  *medication_id : BIGINT <<NN, FK>>
  doctor_id : BIGINT <<FK>>
  *start_date : DATE <<NN>>
  *dosage : VARCHAR(500) <<NN>>
  notes : VARCHAR(500)
  created_by : BIGINT <<FK>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "cid10" <<table>> {
  *id : BIGINT <<PK>>
  --
  *code : VARCHAR(10) <<NN, UNQ>>
  *description : VARCHAR(500) <<NN>>
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "specialty" <<table>> {
  *id : BIGINT <<PK>>
  --
  *name : VARCHAR(100) <<NN, UNQ>>
  description : VARCHAR(200)
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

entity "clinical_evolution" <<table>> {
  *id : BIGINT <<PK>>
  --
  *patient_id : BIGINT <<NN, FK>>
  doctor_id : BIGINT <<FK>>
  cid10_id : BIGINT <<FK>>
  specialty_id : BIGINT <<FK>>
  created_by : BIGINT <<FK>>
  *appointment_date : DATE <<NN>>
  *complaint : VARCHAR(1000) <<NN>>
  diagnosis : VARCHAR(1000)
  consultation_type : VARCHAR(20)
  subject : VARCHAR(200)
  created_at : TIMESTAMP <<NN>>
  updated_at : TIMESTAMP <<NN>>
}

' Relacionamentos

"unity" ||--o{ "patients" : "contains (1:N)"
"patients" ||--o{ "result_exams" : "has (1:N)"
"patients" ||--o{ "current_medication" : "uses (1:N)"
"patients" ||--o{ "clinical_evolution" : "has (1:N)"
"exams" ||--o{ "result_exams" : "has results (1:N)"
"medications" ||--o{ "current_medication" : "prescribed for (1:N)"
"doctors" ||--o{ "current_medication" : "prescribes (1:N)"
"doctors" ||--o{ "clinical_evolution" : "registers (1:N)"
"cid10" ||--o{ "clinical_evolution" : "classifies (1:N)"
"specialty" ||--o{ "clinical_evolution" : "related to (1:N)"
"users" ||--o{ "patients" : "creates (1:N)"
"users" ||--o{ "result_exams" : "creates (1:N)"
"users" ||--o{ "current_medication" : "creates (1:N)"
"users" ||--o{ "clinical_evolution" : "creates (1:N)"

legend
  <<PK>> = Primary Key
  <<FK>> = Foreign Key
  <<NN>> = Not Null
  <<UNQ>> = Unique
endlegend

title Entity-Relationship Diagram (DER) - Patient Management System - EBSERH - Version 2.0

@enduml